--- a/pages/torneos.html
+++ b/pages/torneos.html
@@ -250,13 +250,6 @@
     
         </table>
 
-
-        <!-- FIXTURE -->
-        <div class="tabla-fixture"> 
-          <h2>PRONTO</h2>
-        </div>
-
-
         <!-- VALLA MENOS INVICTA -->
 
         <table class=" tabla-vallas table table-dark table-striped">
@@ -468,6 +461,355 @@
       </tbody>
     </table>
 
+
+    <!-- FIXTURE -->
+    <div class="tabla-fixture">
+          
+      <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingOne">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+              FECHA #1
+            </button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+              <table>
+                <thead>
+                  <th>ORSAI FC</th>
+                  <th>VS</th>
+                  <th>ORSAI FC</th>
+                </thead>
+                <thead>
+                  <th>ORSAI FC</th>
+                  <th>VS</th>
+                  <th>ORSAI FC</th>
+                </thead>
+                <thead>
+                  <th>ORSAI FC</th>
+                  <th>VS</th>
+                  <th>ORSAI FC</th>
+                </thead>
+                <thead>
+                  <th>ORSAI FC</th>
+                  <th>VS</th>
+                  <th>ORSAI FC</th>
+                </thead>
+                <thead>
+                  <th>ORSAI FC</th>
+                  <th>VS</th>
+                  <th>ORSAI FC</th>
+                </thead>
+              </table>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              FECHA #2
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+              <table>
+                <thead>
+                  <th>ORSAI FC</th>
+                  <th>VS</th>
+                  <th>ORSAI FC</th>
+                </thead>
+                <thead>
+                  <th>ORSAI FC</th>
+                  <th>VS</th>
+                  <th>ORSAI FC</th>
+                </thead>
+                <thead>
+                  <th>ORSAI FC</th>
+                  <th>VS</th>
+                  <th>ORSAI FC</th>
+                </thead>
+                <thead>
+                  <th>ORSAI FC</th>
+                  <th>VS</th>
+                  <th>ORSAI FC</th>
+                </thead>
+                <thead>
+                  <th>ORSAI FC</th>
+                  <th>VS</th>
+                  <th>ORSAI FC</th>
+                </thead>
+              </table>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+              FECHA #3
+            </button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+              <table>
+                <thead>
+                  <th>ORSAI FC</th>
+                  <th>VS</th>
+                  <th>ORSAI FC</th>
+                </thead>
+                <thead>
+                  <th>ORSAI FC</th>
+                  <th>VS</th>
+                  <th>ORSAI FC</th>
+                </thead>
+                <thead>
+                  <th>ORSAI FC</th>
+                  <th>VS</th>
+                  <th>ORSAI FC</th>
+                </thead>
+                <thead>
+                  <th>ORSAI FC</th>
+                  <th>VS</th>
+                  <th>ORSAI FC</th>
+                </thead>
+                <thead>
+                  <th>ORSAI FC</th>
+                  <th>VS</th>
+                  <th>ORSAI FC</th>
+                </thead>
+              </table>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingFour">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+              FECHA #4
+            </button>
+          </h2>
+          <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+              <table>
+                <thead>
+                  <th>ORSAI FC</th>
+                  <th>VS</th>
+                  <th>ORSAI FC</th>
+                </thead>
+                <thead>
+                  <th>ORSAI FC</th>
+                  <th>VS</th>
+                  <th>ORSAI FC</th>
+                </thead>
+                <thead>
+                  <th>ORSAI FC</th>
+                  <th>VS</th>
+                  <th>ORSAI FC</th>
+                </thead>
+                <thead>
+                  <th>ORSAI FC</th>
+                  <th>VS</th>
+                  <th>ORSAI FC</th>
+                </thead>
+                <thead>
+                  <th>ORSAI FC</th>
+                  <th>VS</th>
+                  <th>ORSAI FC</th>
+                </thead>
+              </table>
+            </div>
+          </div>
+        </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingFive">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                FECHA #5
+              </button>
+            </h2>
+            <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+                <table>
+                  <thead>
+                    <th>FIVE FC</th>
+                    <th>VS</th>
+                    <th>ORSAI FC</th>
+                  </thead>
+                  <thead>
+                    <th>ORSAI FC</th>
+                    <th>VS</th>
+                    <th>ORSAI FC</th>
+                  </thead>
+                  <thead>
+                    <th>ORSAI FC</th>
+                    <th>VS</th>
+                    <th>ORSAI FC</th>
+                  </thead>
+                  <thead>
+                    <th>ORSAI FC</th>
+                    <th>VS</th>
+                    <th>ORSAI FC</th>
+                  </thead>
+                  <thead>
+                    <th>ORSAI FC</th>
+                    <th>VS</th>
+                    <th>ORSAI FC</th>
+                  </thead>
+                </table>
+              </div>
+            </div>
+          </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingSix">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
+                  FECHA #6
+                </button>
+              </h2>
+              <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">
+                  <table>
+                    <thead>
+                      <th>SIX FC</th>
+                      <th>VS</th>
+                      <th>ORSAI FC</th>
+                    </thead>
+                    <thead>
+                      <th>ORSAI FC</th>
+                      <th>VS</th>
+                      <th>ORSAI FC</th>
+                    </thead>
+                    <thead>
+                      <th>ORSAI FC</th>
+                      <th>VS</th>
+                      <th>ORSAI FC</th>
+                    </thead>
+                    <thead>
+                      <th>ORSAI FC</th>
+                      <th>VS</th>
+                      <th>ORSAI FC</th>
+                    </thead>
+                    <thead>
+                      <th>ORSAI FC</th>
+                      <th>VS</th>
+                      <th>ORSAI FC</th>
+                    </thead>
+                  </table>
+                </div>
+              </div>
+            </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingSeven">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSeven" aria-expanded="false" aria-controls="flush-collapseSeven">
+                    FECHA #7
+                  </button>
+                </h2>
+                <div id="flush-collapseSeven" class="accordion-collapse collapse" aria-labelledby="flush-headingSeven" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">
+                    <table>
+                      <thead>
+                        <th>SEVEN FC</th>
+                        <th>VS</th>
+                        <th>ORSAI FC</th>
+                      </thead>
+                      <thead>
+                        <th>ORSAI FC</th>
+                        <th>VS</th>
+                        <th>ORSAI FC</th>
+                      </thead>
+                      <thead>
+                        <th>ORSAI FC</th>
+                        <th>VS</th>
+                        <th>ORSAI FC</th>
+                      </thead>
+                      <thead>
+                        <th>ORSAI FC</th>
+                        <th>VS</th>
+                        <th>ORSAI FC</th>
+                      </thead>
+                      <thead>
+                        <th>ORSAI FC</th>
+                        <th>VS</th>
+                        <th>ORSAI FC</th>
+                      </thead>
+                    </table>
+                  </div>
+                </div>
+              </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingEight">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseEight" aria-expanded="false" aria-controls="flush-collapseEight">
+                      FECHA #8
+                    </button>
+                  </h2>
+                  <div id="flush-collapseEight" class="accordion-collapse collapse" aria-labelledby="flush-headingEight" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                      <table>
+                        <thead>
+                          <th>EIGHT FC</th>
+                          <th>VS</th>
+                          <th>ORSAI FC</th>
+                        </thead>
+                        <thead>
+                          <th>ORSAI FC</th>
+                          <th>VS</th>
+                          <th>ORSAI FC</th>
+                        </thead>
+                        <thead>
+                          <th>ORSAI FC</th>
+                          <th>VS</th>
+                          <th>ORSAI FC</th>
+                        </thead>
+                        <thead>
+                          <th>ORSAI FC</th>
+                          <th>VS</th>
+                          <th>ORSAI FC</th>
+                        </thead>
+                        <thead>
+                          <th>ORSAI FC</th>
+                          <th>VS</th>
+                          <th>ORSAI FC</th>
+                        </thead>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingNine">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseNine" aria-expanded="false" aria-controls="flush-collapseNine">
+                        FECHA #9
+                      </button>
+                    </h2>
+                    <div id="flush-collapseNine" class="accordion-collapse collapse" aria-labelledby="flush-headingNine" data-bs-parent="#accordionFlushExample">
+                      <div class="accordion-body">
+                        <table>
+                          <thead>
+                            <th>NINE FC</th>
+                            <th>VS</th>
+                            <th>ORSAI FC</th>
+                          </thead>
+                          <thead>
+                            <th>ORSAI FC</th>
+                            <th>VS</th>
+                            <th>ORSAI FC</th>
+                          </thead>
+                          <thead>
+                            <th>ORSAI FC</th>
+                            <th>VS</th>
+                            <th>ORSAI FC</th>
+                          </thead>
+                          <thead>
+                            <th>ORSAI FC</th>
+                            <th>VS</th>
+                            <th>ORSAI FC</th>
+                          </thead>
+                          <thead>
+                            <th>ORSAI FC</th>
+                            <th>VS</th>
+                            <th>ORSAI FC</th>
+                          </thead>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+  
+  </div>
 
     </div>
 
